# qa_guru_lesson15v2

./: .gitignore  pyproject.toml
with_poetry/: pyproject.toml
with_poetry/tests/: test_with_poetry.py
