[tool.poetry]
name = "with-poetry"
version = "0.1.0"
description = ""
authors = ["satrn8 <verypyc@gmail.com>"]
readme = "README.md"
packages = [{include = "with_poetry"}]

[tool.poetry.dependencies]
python = "^3.9"
selene = "^1.0.2"
pytest = "^7.1.3"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
